<resources>
    <string name="app_name">Rammel_DiceRoller</string>
    <string name="no_of_sides_label">No. of Sides</string>
    <string name="button_roll">Roll</string>
    <string name="add_die_size_label">Add a die size:</string>
    <string name="button_save">Save</string>
    <string name="roll_twice_text">Roll Twice?</string>
    <string name="dice_roller_header">Dice Roller</string>
    <string name="choose_a_die_size_label">Choose a Die size:</string>
    <string name="result_label">Result:</string>
    <string name="die_size_label">Die Size:</string>
    <string name="history_label">History:</string>
</resources>