<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/myAppBackgroundColor">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_result1"
                    style="@style/myTextViewStyle.Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tv_result2"
                    style="@style/myTextViewStyle.Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_roll"
                style="@style/myButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_roll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/label_die_size_spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_die_size"
                android:text="@string/choose_a_die_size_label"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_die_size"
                app:layout_constraintEnd_toStartOf="@+id/spinner_die_size"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_die_size" />

            <Spinner
                android:id="@+id/spinner_die_size"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/switch_number_rolls"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/label_die_size_spinner"
                app:layout_constraintTop_toBottomOf="@+id/btn_roll"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_number_rolls"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical|end"
                android:minHeight="48dp"
                android:text="@string/roll_twice_text"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_die_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinner_die_size"
                app:layout_constraintTop_toTopOf="@+id/spinner_die_size"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/label_custom_die"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/add_die_size_label"
                app:layout_constraintBottom_toBottomOf="@+id/input_die_size"
                app:layout_constraintEnd_toStartOf="@+id/input_die_size"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_die_size" />

            <EditText
                android:id="@+id/input_die_size"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/no_of_sides_label"
                android:cursorVisible="false"
                android:hint="@string/no_of_sides_label"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/label_custom_die"
                app:layout_constraintTop_toBottomOf="@+id/spinner_die_size"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_save"
                style="@style/myButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                app:layout_constraintBottom_toBottomOf="@+id/input_die_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_die_size"
                app:layout_constraintTop_toTopOf="@+id/input_die_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/roll_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/history_label"
                app:layout_constraintTop_toBottomOf="@+id/history_label" />

            <TextView
                android:id="@+id/history_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/history_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:id="@+id/btn_clear_history"
                style="@style/myButtonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingStart="9dp"
                app:icon="@android:drawable/ic_menu_delete"
                app:layout_constraintBaseline_toBaselineOf="@+id/history_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/history_label"
                tools:ignore="SpeakableTextPresentCheck" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_die_size" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>